--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -3,6 +3,10 @@ version	next
 known
 	When selecting a shortcut to a folder in the drop down menu of a file selection dialog, under java 1.6, Yapbam hangs.<br/>In fact, this is not a Yapbam bug, but a <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">java1.6 bug</a>. The best way to fix the problem is use java 1.7.
 
+version	0.17.4 (07/20/2014)
+fix
+	Some minor bugs related to filtering on transaction's comment.
+
 version	0.17.3 (06/17/2014)
 improvement
 	The transfer creation dialog now allows you to edit the description and comment of the transactions.
