--- a/Yapbam/src/localization/relnotes.txt
+++ b/Yapbam/src/localization/relnotes.txt
@@ -6,6 +6,7 @@ known
 version	0.17.4 (07/20/2014)
 fix
 	Some minor bugs related to filtering on transaction's comment.
+	Problem to launch application with yapbam.sh through a symbolic link on some Linux flavors.
 
 version	0.17.3 (06/17/2014)
 improvement
