--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -3,7 +3,9 @@ version	next
 known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
 
-version	0.17.4 (20/07/2014)
+version	0.17.4 (12/09/2014)
+improvement
+	La police de caractères peut à présent être choisie dans le dialogue des préférences.
 fix
 	Quelques bugs mineurs relatifs au filtage sur les commentaires des transactions.
 	Problème de lancement via un lien symbolique vers le script shell yapbam.sh sur certains systèmes Linux.
