--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -886,7 +886,7 @@ Tip.8=<html>Sammelerfassung von Zahlungsvorg\u00e4ngen<hr style\="width\:40%">We
 
 #A new transaction's attribute: a comment
 Transaction.comment=Kommentar
-TransactionDialog.comment=Kommentar:
+TransactionDialog.comment=Kommentar\: 
 #Field tooltip in the "new transaction" dialog
 TransactionDialog.comment.tooltip=Geben Sie einen Kommentar zum Zahlungsvorgang an
 #New checkbox in the preference panel to set how the comment is displayed in the tables (merge with description, or in its own column).
@@ -1012,9 +1012,6 @@ Backup.preference.ftp.user.missing=Der Benutzername auf der Seite "{0}" ist nich
 Backup.preference.ftp.invalidPort=Der FTP Port ist au\u00dferhalb des zul\u00e4ssigen Bereichs auf der Seite "{0}" (maximal {1})
 
 Browser.unsupported.message=<HTML>Web-Browser konnte nicht gestartet werden.<br><br>Die Adresse ({0}) wurde in die Zwischenablage kopiert.<br>Sie k\u00f6nnen sie nun in die Adresszeile Ihres Web-Browsers einf\u00fcgen.</HTML> 
-
-#---------------------------------------------------------------------------------------------------------------------------------
-# Added or modified since last translation
 
 # A new process is implemented to check the transactions in the Statement tab.
 # Now, the window is split into two parts. In the upper one, there's the list of transactions that are not already checked, in the lower, there's the currently edited statement.  
@@ -1261,6 +1258,7 @@ BalanceHistory.prefs.highlightAlerts.tooltip=Markieren Sie dieses Feld, um die L
 BalanceHistory.prefs.sameBackgroundAsTransactionTable=<html>Gleichen Hintergrund wie die Registerkarte "<b>{0}</b>"</html>
 BalanceHistory.prefs.sameBackgroundAsTransactionTable.tooltip=<html>Markieren Sie dieses Feld, um die gleiche Hintergrundfarbe wie im Register "<b>{0}</b>" verwenden</html>
 BalanceHistory.prefs.title=Auf dieser Registerkarte k\u00f6nnen Sie die Anzeige der History-Tabelle der Waage konfigurieren
+BalanceHistory.zoom=Zoom\:
 
 Archive.warning.notAnArchiveFile=Die ausgew\u00e4hlte Datei ist nicht ein Archivdaten (Es ist ein Standard-Datendatei).
 
@@ -1285,4 +1283,8 @@ TransactionEditingPreferencesPanel.wizard.last.tooltip=W\u00e4hlen Sie diese Opt
 TransactionEditingPreferencesPanel.wizard.mostProbable=Die wahrscheinlichste Betrag
 TransactionEditingPreferencesPanel.wizard.mostProbable.tooltip=W\u00e4hlen Sie diese Option, um die am meisten verwendete Menge mit der gew\u00e4hlten Bezeichnung in den letzten Monaten zu verwenden 
 
+PreferencesDialog.Theme.font=Schriftart
+PreferencesDialog.Theme.fontName=Schriftartname\:
 
+PreferencesDialog.Theme.fontSelector.tooltip.enabled=W\u00e4hlen Sie die Textschriftart mit diesem Men\u00fc
+PreferencesDialog.Theme.fontSelector.tooltip.disabled=Dieses Men\u00fc ist deaktiviert, da die Schriftarteinstellung nur verf\u00fcgbar mit dem Nimbus-Thema ist
