--- a/src/net/yapbam/gui/tools/messages_de.properties
+++ b/src/net/yapbam/gui/tools/messages_de.properties
@@ -1,28 +1,26 @@
+#X-Generator: crowdin.net
+#Eclipse messages class
+#Mon Dec 23 18:39:35 CET 2013
+CurrencyConverterPanel.CodeColumnName=Code
+CurrencyConverterPanel.CurrencyColumnName=W\u00e4hrung
+CurrencyConverterPanel.CurrencyToColumnName=1 W\u00e4hrung \= ? {0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} \= ? W\u00e4hrung
 CurrencyConverterPanel.amount.toolTip=Geben Sie den zu konvertierenden Betrag ein und dr\u00fccken Sie die <Tab>-Taste
 CurrencyConverterPanel.destination.toolTip=W\u00e4hlen Sie die Zielw\u00e4hrung
 CurrencyConverterPanel.errorMessage=Fehler "{0}" ist aufgetreten.
 CurrencyConverterPanel.origin.toolTip=W\u00e4hlen Sie die urspr\u00fcngliche W\u00e4hrung
 CurrencyConverterPanel.result.toolTip=Die konvertierten Betr\u00e4ge anzeigen
+CurrencyConverterPanel.source=Quelle der Daten
+CurrencyConverterPanel.swapButton.toolTipText=Tauschen Sie die W\u00e4hrungen
 CurrencyConverterPanel.topMessage=Kursen am {0,date,long} {0,time,short}
+ECB.name=Europ\u00e4ischen Zentralbank
+ToolsPlugIn.calculator.title=Rechner
+ToolsPlugIn.calculator.toolTip=\u00d6ffnet einen Taschenrechner
 ToolsPlugIn.currencyConverter.title=W\u00e4hrungsumrechner
 ToolsPlugIn.currencyConverter.toolTip=Den W\u00e4hrungsumrechner \u00f6ffnen
 ToolsPlugIn.menu.title=Extras
 ToolsPlugIn.menu.toolTip=Erm\u00f6glicht den Zugang zu den Yapbam-Extras
-ToolsPlugin.currencyConverter.wait.message=<html>Die Devisenkurse werden abgerufen.<br>Bitte haben Sie etwas Geduld.</html>
 ToolsPlugin.currencyConverter.ioErrorMessage=<html>Beim Verbindungsaufbau ist ein Fehler aufgetreten.<br>Pr\u00fcfen Sie, ob Ihre Internet-Verbindung funktioniert.</html>
-CurrencyConverterPanel.CodeColumnName=Code
-CurrencyConverterPanel.CurrencyColumnName=W\u00e4hrung
-CurrencyConverterPanel.CurrencyToColumnName=1 W\u00e4hrung = ? {0}
-CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? W\u00e4hrung
-
-#-------------------------------------------------------
-# Added or modified since last translation
-
-CurrencyConverterPanel.swapButton.toolTipText=Tauschen Sie die Währungen
-CurrencyConverterPanel.source=Quelle der Daten
-ECB.name=Europ\u00e4ischen Zentralbank
+ToolsPlugin.currencyConverter.wait.message=<html>Die Devisenkurse werden abgerufen.<br>Bitte haben Sie etwas Geduld.</html>
 YAHOO.name=Yahoo
 
-#Adds a calculator in the tools menu
-ToolsPlugIn.calculator.title=Rechner
-ToolsPlugIn.calculator.toolTip=Öffnet einen Taschenrechner
