--- a/src/net/yapbam/gui/tools/messages_fr.properties
+++ b/src/net/yapbam/gui/tools/messages_fr.properties
@@ -1,25 +1,26 @@
-CurrencyConverterPanel.amount.toolTip=Tapez le montant \u00E0 convertir ici, terminez par la touche <Tab>
-CurrencyConverterPanel.destination.toolTip=S\u00E9lectionnez la devise de destination
-CurrencyConverterPanel.errorMessage=L''erreur "{0}" est survenue.
-CurrencyConverterPanel.origin.toolTip=S\u00E9lectionnez la devise d'origine
+#X-Generator: crowdin.net
+#Eclipse messages class
+#Mon Dec 23 18:39:35 CET 2013
+CurrencyConverterPanel.CodeColumnName=Code
+CurrencyConverterPanel.CurrencyColumnName=Devise
+CurrencyConverterPanel.CurrencyToColumnName=1 devise \= ? {0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} \= ? devises
+CurrencyConverterPanel.amount.toolTip=Tapez le montant \u00e0 convertir ici, terminez par la touche <Tab>
+CurrencyConverterPanel.destination.toolTip=S\u00e9lectionnez la devise de destination
+CurrencyConverterPanel.errorMessage=L'erreur "{0}" est survenue.
+CurrencyConverterPanel.origin.toolTip=S\u00e9lectionnez la devise d'origine
 CurrencyConverterPanel.result.toolTip=Ce champ contient le montant converti
+CurrencyConverterPanel.source=Source des donn\u00e9es
+CurrencyConverterPanel.swapButton.toolTipText=Intervertit les devises
 CurrencyConverterPanel.topMessage=Cours du {0,date,long} {0,time,short}
+ECB.name=Banque Centrale Europ\u00e9enne
+ToolsPlugIn.calculator.title=Calculatrice
+ToolsPlugIn.calculator.toolTip=Affiche la calculatrice
 ToolsPlugIn.currencyConverter.title=Convertisseur de devises
 ToolsPlugIn.currencyConverter.toolTip=Ouvre le convertisseur de devises
 ToolsPlugIn.menu.title=Outils
-ToolsPlugIn.menu.toolTip=Ce menu permet l'acc\u00E8s aux utilitaires de Yapbam
-ToolsPlugin.currencyConverter.ioErrorMessage=<html>Une erreur est survenue lors de la communication avec la Banque Centrale Européenne.<br>Assurez-vous que votre connexion à Internet fonctionne.</html>
-ToolsPlugin.currencyConverter.wait.message=<html>Récupération des cours des devises.<br>Merci de patienter.</html>
-CurrencyConverterPanel.CodeColumnName=Code
-CurrencyConverterPanel.CurrencyColumnName=Devise
-CurrencyConverterPanel.CurrencyToColumnName=1 devise = ? {0}
-CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? devises
-
-CurrencyConverterPanel.swapButton.toolTipText=Intervertit les devises
-CurrencyConverterPanel.source=Source des données
-ECB.name=Banque Centrale Européenne
+ToolsPlugIn.menu.toolTip=Ce menu permet l'acc\u00e8s aux utilitaires de Yapbam
+ToolsPlugin.currencyConverter.ioErrorMessage=<html>Une erreur est survenue lors de la communication avec la Banque Centrale Europ\u00e9enne.<br>Assurez-vous que votre connexion \u00e0 Internet fonctionne.</html>
+ToolsPlugin.currencyConverter.wait.message=<html>R\u00e9cup\u00e9ration des cours des devises.<br>Merci de patienter.</html>
 YAHOO.name=Yahoo
 
-#Adds a calculator in the tools menu
-ToolsPlugIn.calculator.title=Calculatrice
-ToolsPlugIn.calculator.toolTip=Affiche la calculatrice
