--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -886,7 +886,7 @@ Tip.8=<html>Saisissez vos op\u00e9rations en masse.<hr style\="width\:40%">Lorsq
 
 #A new transaction's attribute: a comment
 Transaction.comment=Commentaire
-TransactionDialog.comment=Commentaire : 
+TransactionDialog.comment=Commentaire \:
 #Field tooltip in the "new transaction" dialog
 TransactionDialog.comment.tooltip=Entrer ici un commentaire sur l'op\u00e9ration
 #New checkbox in the preference panel to set how the comment is displayed in the tables (merge with description, or in its own column).
@@ -1012,9 +1012,6 @@ Backup.preference.ftp.user.missing=Le nom d'utilisateur n'est pas renseign\u00e9
 Backup.preference.ftp.invalidPort=Le num\u00e9ro de port ftp est en dehors des limites dans l'onglet "{0}" (le maximum est {1})
 
 Browser.unsupported.message=<html>Impossible d'ouvrir un navigateur Web.<br><br>L'URL ({0}) a \u00e9t\u00e9 copi\u00e9e dans le presse-papiers.<br>Vous pouvez maintenant la coller dans votre navigateur Web.</html>
-
-#---------------------------------------------------------------------------------------------------------------------------------
-# Added or modified since last translation
 
 # A new process is implemented to check the transactions in the Statement tab.
 # Now, the window is split into two parts. In the upper one, there's the list of transactions that are not already checked, in the lower, there's the currently edited statement.  
@@ -1270,6 +1267,7 @@ ImportDialog.badSeparator=Ce s\u00e9parateur n'est pas autoris\u00e9
 ExportDialog.decimalSeparator=S\u00e9parateur de d\u00e9cimales
 ExportDialog.decimalSeparator.customized.toolTip=Choisissez cette option pour entrer un s\u00e9parateur de d\u00e9cimales personnalis\u00e9 ci-contre
 ExportDialog.decimalSeparator.customizedChar.toolTip=Tapez le s\u00e9parateur de d\u00e9cimales personnalis\u00e9 ici
+ExportDialog.decimalSeparator.defaultSeparator=S\u00e9parateur par d\u00e9faut ({0})
 ExportDialog.decimalSeparator.defaultSeparator.toolTip=Choisissez cette option pour utiliser le s\u00e9parateur de d\u00e9cimales par d\u00e9faut
 ImportDialog.ignoreFirstLine=Ignorer les premi\u00e8res lignes du fichier. Nombre de lignes \:
 ImportDialog.ignoreFirstLine.toolTip=Cochez cette case pour ignorer les premi\u00e9res lignes du fichier (si, par exemple, ce sont des lignes d'en-t\u00eate)
@@ -1285,3 +1283,8 @@ TransactionEditingPreferencesPanel.wizard.last.tooltip=S\u00e9lectionner cette o
 TransactionEditingPreferencesPanel.wizard.mostProbable=Le montant le plus probable
 TransactionEditingPreferencesPanel.wizard.mostProbable.tooltip=S\u00e9lectionner cette option pour utiliser le montant le plus utilis\u00e9 lors des derniers mois par les op\u00e9rations avec le libell\u00e9 s\u00e9lectionn\u00e9
 
+PreferencesDialog.Theme.font=Police de caract\u00e8res
+PreferencesDialog.Theme.fontName=Nom de la police \:
+
+PreferencesDialog.Theme.fontSelector.tooltip.enabled=S\u00e9lectionnez la police de texte avec ce menu
+PreferencesDialog.Theme.fontSelector.tooltip.disabled=Ce menu est d\u00e9sactiv\u00e9, car le r\u00e9glage de police est uniquement disponible avec le th\u00e8me de Nimbus
