--- a/Yapbam/src/net/yapbam/gui/tools/messages_pt.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/messages_pt.properties
@@ -1,28 +1,26 @@
+#X-Generator: crowdin.net
+#Eclipse messages class
+#Mon Dec 23 18:39:35 CET 2013
+CurrencyConverterPanel.CodeColumnName=C\u00f3digo
+CurrencyConverterPanel.CurrencyColumnName=Moedas
+CurrencyConverterPanel.CurrencyToColumnName=1 moeda \= ? {0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} \= ? moedas
 CurrencyConverterPanel.amount.toolTip=Digite o valor para ser convertido e pressione a tecla <Tab>
 CurrencyConverterPanel.destination.toolTip=Selecione a moeda visada
-CurrencyConverterPanel.errorMessage=L''Erro "{0}" ocorreu.
+CurrencyConverterPanel.errorMessage=L'Erro "{0}" ocorreu.
 CurrencyConverterPanel.origin.toolTip=Selecione aqui a moeda de origem
 CurrencyConverterPanel.result.toolTip=Mostra os valores convertidos
+CurrencyConverterPanel.source=Fonte de dados
+CurrencyConverterPanel.swapButton.toolTipText=Trocar as moedas
 CurrencyConverterPanel.topMessage=Tarifas em {0,date,long} {0,time,short}
+ECB.name=Banco Central Europeu
+ToolsPlugIn.calculator.title=Calculadora
+ToolsPlugIn.calculator.toolTip=Abre uma calculadora
 ToolsPlugIn.currencyConverter.title=Convertedor de moedas
 ToolsPlugIn.currencyConverter.toolTip=Abri o convertedor de moedas
 ToolsPlugIn.menu.title=Ferramentas
-ToolsPlugIn.menu.toolTip=Permite acesso a utilidade de serviço do Yapbam    
-ToolsPlugin.currencyConverter.wait.message=<html>Baixa o valor corrente.<br>Obrigado pela sua paciência.</html>
-ToolsPlugin.currencyConverter.ioErrorMessage=<html>Um erro ocorreu enquanto comunicando.<br>Tenha certeza que a sua Internet está funcionando.</html>
-CurrencyConverterPanel.CodeColumnName=Código
-CurrencyConverterPanel.CurrencyColumnName=Moedas
-CurrencyConverterPanel.CurrencyToColumnName=1 moeda = ? {0}
-CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? moedas
-
-#-------------------------------------------------------
-# Added or modified since last translation
-
-CurrencyConverterPanel.swapButton.toolTipText=Trocar as moedas
-CurrencyConverterPanel.source=Fonte de dados
-ECB.name=Banco Central Europeu
+ToolsPlugIn.menu.toolTip=Permite acesso a utilidade de servi\u00e7o do Yapbam    
+ToolsPlugin.currencyConverter.ioErrorMessage=<html>Um erro ocorreu enquanto comunicando.<br>Tenha certeza que a sua Internet est\u00e1 funcionando.</html>
+ToolsPlugin.currencyConverter.wait.message=<html>Baixa o valor corrente.<br>Obrigado pela sua paci\u00eancia.</html>
 YAHOO.name=Yahoo
 
-#Adds a calculator in the tools menu
-ToolsPlugIn.calculator.title=Calculadora
-ToolsPlugIn.calculator.toolTip=Abre uma calculadora
