--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -886,7 +886,7 @@ Tip.8=<html>Cria suas transa\u00e7\u00f5es<hr style\="width\:40%">Quando voc\u00
 
 #A new transaction's attribute: a comment
 Transaction.comment=Comment\u00e1rios
-TransactionDialog.comment=Comment\u00e1rios :
+TransactionDialog.comment=Comment\u00e1rios \:
 #Field tooltip in the "new transaction" dialog
 TransactionDialog.comment.tooltip=Entre o coment\u00e1rio da transa\u00e7\u00e3o
 #New checkbox in the preference panel to set how the comment is displayed in the tables (merge with description, or in its own column).
@@ -1283,4 +1283,8 @@ TransactionEditingPreferencesPanel.wizard.last.tooltip=Selecione esta op\u00e7\u
 TransactionEditingPreferencesPanel.wizard.mostProbable=Valor mais prov\u00e1vel
 TransactionEditingPreferencesPanel.wizard.mostProbable.tooltip=Selecione esta op\u00e7\u00e3o para usar o valor mais usado com a descri\u00e7\u00e3o selecionada durante o \u00faltimo m\u00eas
 
+PreferencesDialog.Theme.font=Fonte
+PreferencesDialog.Theme.fontName=Nome da fonte\:
 
+PreferencesDialog.Theme.fontSelector.tooltip.enabled=Selecione a fonte de texto com este menu
+PreferencesDialog.Theme.fontSelector.tooltip.disabled=Este menu est\u00e1 desativado porque a configura\u00e7\u00e3o de fonte s\u00f3 est\u00e1 dispon\u00edvel com o tema de Nimbus
