--- a/Yapbam/src/localization/relnotes.txt
+++ b/Yapbam/src/localization/relnotes.txt
@@ -3,6 +3,12 @@ version	next
 known
 	When selecting a shortcut to a folder in the drop down menu of a file selection dialog, under java 1.6, Yapbam hangs.<br/>In fact, this is not a Yapbam bug, but a <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">java1.6 bug</a>. The best way to fix the problem is use java 1.7.
 
+version	0.17.5 (10/13/2014)
+improvement
+	Adds a confirm dialog when creating a new data file.
+fix
+	Sometimes, when creating bulk transactions, the value date was not automatically set when you selected a predefined description.
+
 version	0.17.4 (09/13/2014)
 improvement
 	The font can be selected in the preference dialog.
