--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -3,6 +3,12 @@ version	next
 known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
 
+version	0.17.5 (13/10/2014)
+improvement
+	Ajout d'un dialogue de confirmation lors de la création d'un nouveau fichier de données.
+fix
+	Le calcul automatique de la date de valeur en fonction du mode ne se faisait pas dans certains cas lors de la saisie de rafale d'opérations. 
+
 version	0.17.4 (13/09/2014)
 improvement
 	La police de caractères peut à présent être choisie dans le dialogue des préférences.
