--- a/Yapbam/src/Resources_zh.properties
+++ b/Yapbam/src/Resources_zh.properties
@@ -1,4 +1,4 @@
-#X-Generator: crowdin.net
+#X-Generator: crowdin.com
 
 MainFrame.ReadError=Yapbam \u7121\u6cd5\u8b80\u53d6\u6b64\u6a94\u6848
 MainFrame.CheckedBalance=\u67e5\u5c0b\u9918\u984d\: {0}
