--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -1,4 +1,4 @@
-#X-Generator: crowdin.net
+#X-Generator: crowdin.com
 ApplicationName=Yet Another Personal Account Manager
 
 MainFrame.ReadError=Yapbam kann diese Datei nicht lesen
@@ -35,6 +35,7 @@ MainMenu.File.ToolTip=Erm\u00f6glicht die Erstellung, das \u00d6ffnen und Sicher
 MainMenu.NewFile=Neu
 MainMenu.NewFile.Mnemonic=N
 MainMenu.NewFile.ToolTip=Erzeugt eine neue, leere Kontodatei (ohne Zahlungsvorg\u00e4nge oder Kontoinformationen)
+MainMenu.NewFile.ConfirmMessage=Sie sind dabei, eine neue leere Datendatei erstellen. M\u00f6chten Sie fortfahren?
 
 MainMenu.Open=\u00d6ffnen
 MainMenu.Open.Mnemonic=O
