--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -1,4 +1,4 @@
-#X-Generator: crowdin.net
+#X-Generator: crowdin.com
 ApplicationName=Yet Another Personal Bank Account Manager
 
 MainFrame.ReadError=Yapbam ne peut pas lire ce fichier.
@@ -35,6 +35,7 @@ MainMenu.File.ToolTip=Ce menu permet de cr\u00e9er, d'ouvrir et de sauvegarder d
 MainMenu.NewFile=Nouveau
 MainMenu.NewFile.Mnemonic=N
 MainMenu.NewFile.ToolTip=Cr\u00e9e un nouveau fichier de comptes vide (sans op\u00e9ration ni compte)
+MainMenu.NewFile.ConfirmMessage=Vous \u00eates sur le point de cr\u00e9er un nouveau fichier de donn\u00e9es vide. Voulez-vous continuer ?
 
 MainMenu.Open=Ouvrir
 MainMenu.Open.Mnemonic=O
