--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -1,4 +1,4 @@
-#X-Generator: crowdin.net
+#X-Generator: crowdin.com
 ApplicationName=Yet Another Personal Bank Account Manager
 
 MainFrame.ReadError=Yapbam n\u00e3o pode ler este arquivo
@@ -35,6 +35,7 @@ MainMenu.File.ToolTip=Permite-lhe criar, abrir e salvar arquivos da sua conta
 MainMenu.NewFile=Novo
 MainMenu.NewFile.Mnemonic=N
 MainMenu.NewFile.ToolTip=Cria um novo arquivo da sua conta (sem transa\u00e7\u00f5es ou contas)
+MainMenu.NewFile.ConfirmMessage=Voc\u00ea est\u00e1 prestes a criar um novo arquivo de dados vazio. Voc\u00ea quer continuar?
 
 MainMenu.Open=Abrir
 MainMenu.Open.Mnemonic=A
@@ -682,7 +683,7 @@ FilePasswordDialog.setPassword.question=Digite uma senha para restrito acesso ao
 FilePasswordDialog.setPassword.tooltip=Digite a senha aqui our deixe em branco para deixar livre acesso ao arquivo
 # A warning message to warn about the fact that forgetting the password leads to permanent data loss.
 FilePasswordDialog.setPassword.warning=<html><b>ADVERT\u00caNCIA\:</b><br>If se voc\u00ea perder sua senha, voc\u00ea n\u00e3o poder\u00e1 recuperar seus dados, mesmo com a ajuda do Yapbam team.</html>
-FilePasswordDialog.openFile.question=<html>This file is password protected.<br>Enter the password to access it\:</html>
+FilePasswordDialog.openFile.question=<html>Este arquivo \u00e9 protegido por senha.<br>Digite a senha para acess\u00e1-lo\:</html>
 FilePasswordDialog.openFile.badPassword.question=<html>A senha que voc\u00ea digitou est\u00e1 errada.<br>Digite a senha abaixo\:</html>
 FilePasswordDialog.openFile.tooltip=Digite a senha aqui.
 FilePasswordDialog.confirm=Confirma\u00e7\u00e3o da senha
@@ -831,9 +832,9 @@ TransactionEditingPreferencesPanel.statementBasedOnDate.tooltip=Selecione esta p
 TransactionEditingPreferencesPanel.statementBasedOnValueDate=Baseado no valor do dia
 TransactionEditingPreferencesPanel.statementBasedOnValueDate.tooltip=Selecione esta para ter a identifica\u00e7\u00e3o da conta baseada no valor do dia da transa\u00e7\u00e3o
 TransactionEditingPreferencesPanel.format.title=Formato
-TransactionEditingPreferencesPanel.format.long=Long Style (example\: {0})
+TransactionEditingPreferencesPanel.format.long=Tempo de estilo (exemplo\: {0})
 TransactionEditingPreferencesPanel.format.long.tooltip=Selecione este para longa identifica\u00e7\u00e3o da conta
-TransactionEditingPreferencesPanel.format.short=Estilo curto (example\: {0})
+TransactionEditingPreferencesPanel.format.short=Estilo curto (exemplo\: {0})
 TransactionEditingPreferencesPanel.format.short.tooltip=Selecione este para curta identifica\u00e7\u00e3o da conta
 TransactionEditingPreferencesPanel.format.customized=Personalizados
 TransactionEditingPreferencesPanel.format.customized.tooltip=Selecione esta para editar um formato personalizado
@@ -1264,7 +1265,7 @@ Archive.warning.notAnArchiveFile=O arquivo selecionado n\u00e3o \u00e9 um arquiv
 
 ImportDialog.badSeparator=Este separador n\u00e3o \u00e9 permitido
 
-ExportDialog.decimalSeparator=Decimal separator
+ExportDialog.decimalSeparator=Separador decimal
 ExportDialog.decimalSeparator.customized.toolTip=Selecione esta op\u00e7\u00e3o para especificar um separador decimal de sua escolha
 ExportDialog.decimalSeparator.customizedChar.toolTip=Tecle o separador preferido
 ExportDialog.decimalSeparator.defaultSeparator=Padr\u00e3o ({0})
