--- a/src/net/yapbam/gui/tools/messages_pt.properties
+++ b/src/net/yapbam/gui/tools/messages_pt.properties
@@ -1,4 +1,4 @@
-#X-Generator: crowdin.net
+#X-Generator: crowdin.com
 #Eclipse messages class
 #Mon Dec 23 18:39:35 CET 2013
 CurrencyConverterPanel.CodeColumnName=C\u00f3digo
