--- a/src/net/yapbam/gui/tools/messages_zh.properties
+++ b/src/net/yapbam/gui/tools/messages_zh.properties
@@ -1,4 +1,4 @@
-#X-Generator: crowdin.net
+#X-Generator: crowdin.com
 #Eclipse messages class
 #Mon Dec 23 18:39:35 CET 2013
 CurrencyConverterPanel.CodeColumnName=\u4ee3\u78bc
