--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -3,6 +3,10 @@ version	next
 known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
 
+version	0.17.7 (??/10/2014)
+fix
+	Lorsque Yapbam était installé dans un dossier protégé en écriture, il était impossible d'effacer certaines préférences (le réglage du proxy, par exemple).
+
 version	0.17.6 (20/10/2014)
 fix
 	yapbam.sh ne fonctionnait plus sur MacOS depuis la version 0.17.4.
