--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -3,6 +3,10 @@ version	next
 known
 	When selecting a shortcut to a folder in the drop down menu of a file selection dialog, under java 1.6, Yapbam hangs.<br/>In fact, this is not a Yapbam bug, but a <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">java1.6 bug</a>. The best way to fix the problem is use java 1.7.
 
+version	0.17.7 (10/??/2014)
+fix
+	When Yapbam was installed in a write protected folder, it was impossible to clear some preferences (The proxy settings, for instance).
+
 version	0.17.6 (10/20/2014)
 fix
 	yapbam.sh not worked anymore on MacOS since 0.17.4.
