--- a/src/net/yapbam/gui/welcome/urls_fr.properties
+++ b/src/net/yapbam/gui/welcome/urls_fr.properties
@@ -1,3 +1,3 @@
-sampleFile=Other/samples/YapbamDataSample_fr.xml
+sampleFile=classpath:/YapbamDataSample_fr.xml
 faq=http://www.yapbam.net/fr/doc/
 tutorial=http://www.yapbam.net/fr/doc/tutorial.php
