--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -34,7 +34,7 @@ MainMenu.File.ToolTip=Permite-lhe criar, abrir e salvar arquivos da sua conta
 
 MainMenu.NewFile=Novo
 MainMenu.NewFile.Mnemonic=N
-MainMenu.NewFile.ToolTip=Cria um novo arquivo da sua conta (sem transa\u00e7\u00f5es ou contas)
+MainMenu.NewFile.ToolTip=Cria um novo arquivo da sua conta (sem transa\u00e7\u00f5es ou contas) 
 MainMenu.NewFile.ConfirmMessage=Voc\u00ea est\u00e1 prestes a criar um novo arquivo de dados vazio. Voc\u00ea quer continuar?
 
 MainMenu.Open=Abrir
@@ -190,7 +190,7 @@ BalanceHistory.transaction.title=Transa\u00e7\u00f5es
 BalanceHistory.transaction.tooltip=Transa\u00e7\u00f5es e balan\u00e7o di\u00e1rio
 BalanceHistory.transaction.remainingBalance=balan\u00e7o restante
 
-AboutDialog.Content=<html>Direitos de c\u00f3pia &copy; 2009-2014 <b>{0}</b> - Todos os direitos reservado<br>Vers\u00e3o\: <b>{1}</b></html>
+AboutDialog.Content=<html>Direitos de c\u00f3pia &copy; 2009-2015 <b>{0}</b> - Todos os direitos reservado<br>Vers\u00e3o\: <b>{1}</b></html>
 AboutDialog.License.TabName=Licen\u00e7a
 AboutDialog.RelNotes.TabName=Notas distribu\u00eddas
 AboutDialog.Contributors.TabName=Contribuintes
@@ -257,6 +257,7 @@ GeneratePeriodicalTransactionsDialog.lastDate.toolTip=Digite a data na qual tran
 GeneratePeriodicalTransactionsDialog.summary=Transa\u00e7\u00f5es \: {0}, Recibos \: {1}, Despesas \: {2}, Total \: {3}
 GeneratePeriodicalTransactionsDialog.alert=Algumas transa\u00e7\u00f5es peri\u00f3dicas est\u00e3o pendentes e provavelmente ser\u00e3o geradas.
 
+Generic.example=Exemplo\:
 Generic.warning=Advert\u00eancia
 GenericButton.cancel=Cancelar
 GenericButton.cancel.toolTip=Cancela a atual entrada
@@ -1289,3 +1290,4 @@ PreferencesDialog.Theme.fontName=Nome da fonte\:
 
 PreferencesDialog.Theme.fontSelector.tooltip.enabled=Selecione a fonte de texto com este menu
 PreferencesDialog.Theme.fontSelector.tooltip.disabled=Este menu est\u00e1 desativado porque a configura\u00e7\u00e3o de fonte s\u00f3 est\u00e1 dispon\u00edvel com o tema de Nimbus
+
