--- a/Yapbam/src/localization/relnotes.txt
+++ b/Yapbam/src/localization/relnotes.txt
@@ -8,6 +8,8 @@ fix
 	When selecting a predefined label in the sub-transaction creation dialog, the receipt box was systematically checked.
 	When entering transactions in bulk mode, for an operation other than the first, when we chose a predefined label involving the use of a checkbook, check number was not filled.
 	When saving a file to a folder where user did not permission to delete files, an error occurred after the file was saved.
+improvement
+	Adds partial translations into Turkish and Traditional Chinese.
 
 version	0.17.7 (11/10/2014)
 fix
