--- a/Yapbam/src/localization/relnotes.txt
+++ b/Yapbam/src/localization/relnotes.txt
@@ -3,11 +3,12 @@ version	next
 known
 	When selecting a shortcut to a folder in the drop down menu of a file selection dialog, under java 1.6, Yapbam hangs.<br/>In fact, this is not a Yapbam bug, but a <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">java1.6 bug</a>. The best way to fix the problem is use java 1.7.
 
-version 0.17.8 (01/02/2015)
+version 0.17.8 (01/04/2015)
 fix
 	When selecting a predefined label in the sub-transaction creation dialog, the receipt box was systematically checked.
 	When entering transactions in bulk mode, for an operation other than the first, when we chose a predefined label involving the use of a checkbook, check number was not filled.
 	When saving a file to a folder where user did not permission to delete files, an error occurred after the file was saved.
+	In the "Balance history" tab, when switching from one account to another via the filter menu, the vertical scale was sometimes not properly updated.
 improvement
 	Adds partial translations into Turkish and Traditional Chinese.
 
