--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -1291,3 +1291,4 @@ PreferencesDialog.Theme.fontName=Nom de la police \:
 PreferencesDialog.Theme.fontSelector.tooltip.enabled=S\u00e9lectionnez la police de texte avec ce menu
 PreferencesDialog.Theme.fontSelector.tooltip.disabled=Ce menu est d\u00e9sactiv\u00e9, car le r\u00e9glage de police est uniquement disponible avec le th\u00e8me de Nimbus
 
+BalanceHistory.transaction.hideIntermediate=Masquer les soldes interm\u00e9diaires
