--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -1291,3 +1291,4 @@ PreferencesDialog.Theme.fontName=Nome da fonte\:
 PreferencesDialog.Theme.fontSelector.tooltip.enabled=Selecione a fonte de texto com este menu
 PreferencesDialog.Theme.fontSelector.tooltip.disabled=Este menu est\u00e1 desativado porque a configura\u00e7\u00e3o de fonte s\u00f3 est\u00e1 dispon\u00edvel com o tema de Nimbus
 
+BalanceHistory.transaction.hideIntermediate=Esconder saldos interm\u00e9dios
