--- a/Yapbam/src/Resources_tr.properties
+++ b/Yapbam/src/Resources_tr.properties
@@ -136,9 +136,22 @@ AboutDialog.RelNotes.TabName=S\u00fcr\u00fcm notlar\u0131
 AboutDialog.Contributors.TabName=Katk\u0131da bulunanlar
 
 AccountDialog.title.new=Yeni hesap
+AccountDialog.account=Hesap\:
+AccountDialog.account.tooltip=Hesap ID'sini girin
+AccountDialog.balance=\u0130lk bakiye\:
+AccountDialog.balance.tooltip=Hesab\u0131n ilk bakiyesini girin
+AccountDialog.modes.border.title=\u00d6deme \u015fekilleri
 
 
+ModeDialog.account=Hesap\: {0}
+ModeDialog.name=\u0130sim\:
+ModeDialog.forDebts=Giderler i\u00e7in kullan\u0131labilir
+ModeDialog.forReceipts=Gelirler i\u00e7in kullan\u0131labilir
+ModeDialog.name.short=K\u0131sa isim
+ModeDialog.forDebts.short=Giderler
+ModeDialog.forReceipts.short=Gelirler
 
+CategoryDialog.title=Kategori olu\u015fturma
 CategoryDialog.category=Kategori\:
 CategoryDialog.category.tooltip=Kategori ad\u0131 girin
 CategoryDialog.err1=Kategori ad\u0131 bo\u015f oldu\u011fu i\u00e7in kullan\u0131lamaz
@@ -195,9 +208,19 @@ TransactionDialog.amount.tooltip=\u0130\u015flem tutar\u0131n\u0131 buraya girin
 TransactionDialog.bad.amount=\u0130\u015flem tutar\u0131 ge\u00e7ersiz oldu\u011fu i\u00e7in kullan\u0131lamaz
 TransactionDialog.bad.date=\u0130\u015flem tarihi ge\u00e7ersiz oldu\u011fu i\u00e7in kullan\u0131lamaz
 TransactionDialog.bad.valueDate=\u0130\u015flem de\u011fer tarihi ge\u00e7ersiz oldu\u011fu i\u00e7in kullan\u0131lamaz
+TransactionDialog.SubPanel.delete=Sil
+TransactionDialog.SubPanel.delete.tooltip=Se\u00e7ili alt i\u015flemi siler
+TransactionDialog.SubPanel.modify=D\u00fczenle
+TransactionDialog.SubPanel.modify.tooltip=Se\u00e7ili alt i\u015flemi d\u00fczenler
+TransactionDialog.SubPanel.new=Yeni Alt i\u015flem
+TransactionDialog.SubPanel.new.tooltip=Yeni bir alt i\u015flem olu\u015fturur
+TransactionDialog.SubPanel.title=Alt i\u015flemler
 
 
 
+PreferencesDialog.title=Se\u00e7enekler
+PreferencesDialog.Localization.title=Yerelle\u015ftirme
+PreferencesDialog.Localization.country=\u00dclke
 PreferencesDialog.Localization.defaultCountry=Varsay\u0131lan ({0})
 PreferencesDialog.Localization.defaultCountry.toolTip=Sisteminizin varsay\u0131lan \u00fclkesini kullanmak i\u00e7in bunu se\u00e7in  ({0})
 PreferencesDialog.Localization.defaultLanguage=<html>Sistem dili<br>(\u0130ngilizce, E\u011fer bu dil Yapbam i\u00e7inde mevcut de\u011filse)</html>
@@ -265,6 +288,7 @@ PeriodicalTransactionDialog.nextDate.toolTip=Sonraki i\u015flem tarihini buraya 
 
 
 
+StatisticsPlugin.title=\u0130statistikler
 
 
 
