--- a/Yapbam/src/localization/relnotes.txt
+++ b/Yapbam/src/localization/relnotes.txt
@@ -3,9 +3,11 @@ version	next
 known
 	When selecting a shortcut to a folder in the drop down menu of a file selection dialog, under java 1.6, Yapbam hangs.<br/>In fact, this is not a Yapbam bug, but a <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">java1.6 bug</a>. The best way to fix the problem is use java 1.7.
 
-version	0.17.9 (??/01/2015)
+version	0.17.9 (01/11/2015)
 fix
 	In the "Balance history/Transactions" tab, receipts were not processed before expenses. This led to false alerts.
+improvement
+	Adds ability to hide the intermediate balances in the "Operations" table of the "History of the balance" tab.
 
 version 0.17.8 (01/04/2015)
 fix
