--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -1292,3 +1292,11 @@ PreferencesDialog.Theme.fontSelector.tooltip.enabled=S\u00e9lectionnez la police
 PreferencesDialog.Theme.fontSelector.tooltip.disabled=Ce menu est d\u00e9sactiv\u00e9, car le r\u00e9glage de police est uniquement disponible avec le th\u00e8me de Nimbus
 
 BalanceHistory.transaction.hideIntermediate=Masquer les soldes interm\u00e9diaires
+
+messages.close.tooltip=Cliquez sur ce bouton pour fermer la zone de messages ci-contre
+messages.markAsRead=Marquer comme lu
+messages.open.tooltip=Certains messages sont disponibles, cliquez sur ce bouton pour les afficher 
+messages.showReadMessages=Afficher les messages d\u00e9j\u00e0 lus ({0}/{1})
+messages.title=Messages
+messagesnoMessageAvailable=Aucun message non lu disponible
+
