--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -1292,3 +1292,11 @@ PreferencesDialog.Theme.fontSelector.tooltip.enabled=Selecione a fonte de texto 
 PreferencesDialog.Theme.fontSelector.tooltip.disabled=Este menu est\u00e1 desativado porque a configura\u00e7\u00e3o de fonte s\u00f3 est\u00e1 dispon\u00edvel com o tema de Nimbus
 
 BalanceHistory.transaction.hideIntermediate=Esconder saldos interm\u00e9dios
+
+messages.close.tooltip=Clique neste bot\u00e3o para fechar a \u00e1rea de mensagens ao lado
+messages.markAsRead=Marcar como lido
+messages.open.tooltip=Algumas mensagens est\u00e3o dispon\u00edveis, clique neste bot\u00e3o para exibi-los 
+messages.showReadMessages=Mostrar mensagens de leitura ({0}/{1})
+messages.title=Messages
+messagesnoMessageAvailable=Nenhuma mensagem n\u00e3o lida dispon\u00edvel
+
