--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -3,9 +3,11 @@ version	next
 known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
 
-version	0.17.12 (21/02/2015)
+version	0.18.0 (22/02/2015)
 fix
-	Suppression du thème "Mac OS X" qu'un bug de Java empêche de fonctionner correctement (impossible de sauvegarder dans un nouveau fichier). 
+	Suppression du thème "Mac OS X" qu'un bug de Java empêche de fonctionner correctement (impossible de sauvegarder dans un nouveau fichier).
+improvement
+	Ajout d'une zone dans la fenêtre principale affichant les messages de l'équipe Yapbam (Alerte sur l'usage de version de Java obsolète, demande d'aide, ...).
 
 version	0.17.11 (08/02/2015)
 fix
