--- a/Yapbam/src/localization/relnotes.txt
+++ b/Yapbam/src/localization/relnotes.txt
@@ -3,9 +3,11 @@ version	next
 known
 	When selecting a shortcut to a folder in the drop down menu of a file selection dialog, under java 1.6, Yapbam hangs.<br/>In fact, this is not a Yapbam bug, but a <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">java1.6 bug</a>. The best way to fix the problem is use java 1.7.
 
-version	0.17.12 (02/21/2015)
+version	0.18.0 (02/22/2015)
 fix
 	Removes "Mac OS X" theme. A Java bug prevented this theme from functioning properly (It was impossible to save data in a new file).
+improvement
+	Adds a "Messages" area in the main window that displays messages from the Yapbam team (Warning on obsolete java version, request for help, ...)
 
 version	0.17.11 (02/08/2015)
 fix
